# project_online_store

./: .env  README.md  catalog_app_data.json  data.json  pyproject.toml
blog_app/: admin.py  models.py  urls.py  views.py
blog_app/migrations/: 0001_initial.py
blog_app/templates/blog_app/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog_app/: admin.py  apps.py  forms.py  models.py  serviced.py  urls.py  views.py
catalog_app/management/commands/: clear_fill.py
catalog_app/migrations/: 0001_initial.py  0002_category_created_at.py  0002_contact.py  0002_product_author.py  0003_alter_product_name.py  0003_product_is_published.py  0004_alter_product_options.py  0004_version.py  0005_alter_product_options.py
catalog_app/templates/catalog_app/: base.html  contact_page.html  home_page.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  product_page.html  user_product_list.html
catalog_app/templatetags/: catalog_app_tags.py
config/: settings.py  urls.py
users_app/: forms.py  models.py  urls.py  views.py
users_app/management/commands/: createadminuser.py
users_app/migrations/: 0001_initial.py  0002_alter_user_number.py  0003_user_is_confirmed_email.py  0004_alter_user_is_active.py  0005_alter_user_country_alter_user_is_active.py  0006_alter_user_avatar.py
users_app/templates/users_app/: confirm_email.html  login.html  registration.html  reset_password_confirm.html  reset_password_enter.html  reset_password_update.html  user_form.html
(+2 files in other folders)
