[tool.poetry]
name = "project-online-store"
version = "0.1.0"
description = ""
authors = ["Ilya Kalberdin <ilyakalberdin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
ipython = "^8.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
